# infergo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.cpu  Dockerfile.cuda  LICENSE  README.md  docker-compose.yml  optimization_tasks.md  problemsolve.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
benchmarks/: detect_bench.py  grammar_bench.go
benchmarks/scalability/: bench_scale.py  results_scalability.md
benchmarks/vs_python/: bench_all_combos.py  bench_detect.py  bench_detect_multi.py  bench_embedding.py  bench_full.py  bench_llm.py  bench_multimodel.py  bench_onnx.py  plot_results.py  results_all_combos.md  results_detect.md  results_detect_adaptive.md  results_detect_batch.md  results_detect_full.md  results_detect_gpu_pipeline.md  results_detect_multi.md  results_detect_torch.md  results_embedding.md  results_full.md  results_full_cpu.md  results_full_cuda.md  results_infergo_cpu.md  results_llm.md  results_p50_sweep.md
cmake/: FindONNXRuntime.cmake  Toolchain.cmake
cpp/api/: CMakeLists.txt  api.cpp  api_test.cpp
cpp/cuda/: CMakeLists.txt  vram_monitor.cpp  vram_monitor.hpp  vram_monitor_test.cpp
cpp/include/: infer_api.h  tokenizers_ffi.h
cpp/llm/: CMakeLists.txt  infer_sequence.cpp  infer_sequence.hpp  infer_sequence_test.cpp  kv_cache.cpp  kv_cache.hpp  kv_cache_test.cpp  kv_paged.cpp  kv_paged.hpp  kv_paged_test.cpp  kv_serialize_test.cpp  llm_engine.cpp  llm_engine.hpp  llm_test.cpp  sampler.cpp  sampler.hpp  sampler_test.cpp  speculative.cpp  speculative.hpp
cpp/onnx/: CMakeLists.txt  onnx_session.cpp  onnx_session.hpp  onnx_test.cpp
cpp/postprocess/: CMakeLists.txt  classify.cpp  classify_test.cpp  nms.cpp  nms_test.cpp  normalize_embedding.cpp  normalize_embedding_test.cpp  postprocess.hpp
cpp/preprocess/: CMakeLists.txt  decode_image.cpp  decode_image_test.cpp  letterbox.cpp  letterbox_test.cpp  normalize.cpp  normalize_test.cpp  preprocess.hpp  stack_batch.cpp  stack_batch_test.cpp
cpp/tensor/: CMakeLists.txt  tensor.cpp  tensor.hpp  tensor_cuda.cu  tensor_test.cpp
cpp/tokenizer/: CMakeLists.txt  tokenizer.cpp  tokenizer.hpp  tokenizer_ffi_test.cpp  tokenizer_test.cpp
cpp/torch/: CMakeLists.txt  gpu_preprocess.cpp  gpu_preprocess.hpp  gpu_preprocess_test.cpp  torch_session.cpp  torch_session.hpp  torch_session_test.cpp
cpp/video/: CMakeLists.txt  decoder.cpp  decoder.hpp  decoder_test.cpp  encoder.cpp  encoder.hpp  font5x8.hpp  frame_annotator.cpp  frame_annotator.hpp  frame_annotator_test.cpp
deploy/: awesome_go_pr.txt  awesome_go_submission.md  launch_posts.md
deploy/aws/: README.md  collect_results.sh  provision.sh  run_opt23.sh  run_opt24.sh  run_opt25_eks.sh  run_opt26.sh  run_p50.sh  setup_instance.sh  teardown.sh
deploy/helm/infergo/: Chart.yaml  values.yaml
deploy/helm/infergo/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  keda-scaledobject.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docs/: c-api-reference.md  contributing.md  deployment.md  detection.md  getting-started.md  go-api-reference.md  keda-scaledobject.yaml  llm-internals.md  python.md  video-annotation.md
examples/llama3/: main.go
examples/yolov8/: main.go
go/: go.mod  go.sum
go/alerts/: alerter.go  alerter_test.go
go/analytics/: zones.go  zones_config.go  zones_test.go
go/client/: client.go  client_test.go  doc.go
go/cmd/infergo/: adaptive.go  adaptive_config_test.go  adaptive_test.go  batch_tuning_test.go  benchmark.go  convert.go  convert_test.go  detect.go  detect_bench_test.go  detect_cmd.go  detect_torch.go  detect_torch_test.go  embed.go  gc_test.go  grpc_adapter.go  list.go  main.go  mode_test.go  pipeline.go  pipeline_test.go  pull.go  pull_test.go  registry.go  scheduler.go  serve.go  stream_pipeline_test.go  tensor_split_test.go  validate.go  validate_test.go
go/cuda/: vram.go  vram_test.go
go/grpc/: codec.go  server.go  server_test.go
go/grpc/pb/: infergo.pb.go  infergo_grpc.pb.go
go/hub/: hub.go  hub_test.go
go/llm/: llm_test.go  model.go  sampler.go  sampler_test.go  sequence.go  speculative.go  speculative_test.go
go/onnx/: session.go  session_test.go
go/postprocess/: decoder.go  decoder_test.go
go/preprocess/: pipeline.go  pipeline_test.go
go/recording/: recorder.go  recorder_test.go
go/server/: auth.go  auth_test.go  batcher.go  batcher_test.go  grammar.go  grammar_test.go  health.go  health_test.go  keda_test.go  kv_metrics_test.go  metrics.go  metrics_test.go  queue.go  queue_test.go  registry.go  registry_test.go  reload_test.go  router.go  router_test.go  streaming.go  streaming_test.go  tracing.go  tracing_test.go  websocket.go  websocket_test.go  ws_detect.go  ws_detect_test.go
go/tensor/: benchmark_test.go  tensor.go  tensor_test.go
go/tokenizer/: tokenizer.go  tokenizer_test.go
go/torch/: purego_session.go  purego_session_test.go  session.go  session_test.go
go/tracker/: bytetrack.go  detection.go  kalman.go  lap.go  tracker_test.go
go/video/: annotator.go  annotator_fast.go  annotator_fast_test.go  annotator_test.go  decoder.go  encoder.go
proto/: infergo.proto
python/: README.md  pyproject.toml
python/benchmarks/: bench_results.json  bench_three_ways.py  plot_bench.py
python/infergo/: __init__.py  __init_subpackage__.py  _lib.py  _types.py  llm.py  postprocess.py  preprocess.py  session.py  tensor.py  tokenizer.py  torch_session.py
python/tests/: test_llm.py  test_tokenizer.py  test_torch_session.py
tokenizer-rs/: Cargo.toml  target
tokenizer-rs/src/: lib.rs
tools/: convert_to_torchscript.py  validate_export.py
