[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infergo"
version = "0.1.0"
description = "Python bindings and client for infergo — production-grade LLM inference"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = []  # numpy is optional; openai is optional

[project.optional-dependencies]
numpy  = ["numpy>=1.24"]
openai = ["openai>=1.0"]
all    = ["numpy>=1.24", "openai>=1.0"]

[project.urls]
Homepage   = "https://github.com/ailakshya/infergo"
Repository = "https://github.com/ailakshya/infergo"

[tool.setuptools.packages.find]
where   = ["."]
include = ["infergo*"]

[tool.setuptools.package-data]
infergo = ["*.so", "*.dylib", "*.dll"]
